--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body class="debug">
     <!--header-->
-    <header></header>
+    <header class="sitehearder">
+
+    </header>
     <!--main-->
-    <main></main>
+    <main class="sitemain">
+
+    </main>
     <!--footer-->
     <footer></footer>
     
