--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 
     </header>
     <!--main-->
-    <main class="sitemain">
+    <main class="contenuto">
+        <section class="box1">
+
+        </section> 
+        <section class="macrobox">
+        
+            </section>
+        </section>
 
     </main>
     <!--footer-->
